--- a/crane_plus_examples/package.xml
+++ b/crane_plus_examples/package.xml
@@ -2,12 +2,13 @@
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
   <name>crane_plus_examples</name>
-  <version>1.0.0</version>
-  <description>CRANE+V2 examples package</description>
+  <version>1.1.0</version>
+  <description>CRANE+ V2 examples package</description>
   <maintainer email="shop@rt-net.jp">RT Corporation</maintainer>
   <license>Apache License 2.0</license>
 
-  <author email="s.aoki@rt-net.jp">ShotaAk</author>
+  <author email="s.aoki@rt-net.jp">Shota Aoki</author>
+  <author email="kuwagata@rt-net.jp">Atsushi Kuwagata</author>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
 
