--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 4e0a048
-	base = ca2dc62
+	base = b59cfc2
 	trim = crane_plus_examples
-	trimbase = 
+	trimbase = ca2dc62
