--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 4e0a048
-	base = 291e0d4
+	base = 985d3bc
 	trim = crane_plus_ignition
-	trimbase = 
+	trimbase = 291e0d4
