--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 4e0a048
-	base = 4f50369
+	base = e67ff7f
 	trim = crane_plus_gazebo
-	trimbase = 
+	trimbase = 4f50369
