--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 4e0a048
-	base = 662570a
+	base = 8872ade
 	trim = crane_plus_control
-	trimbase = 
+	trimbase = 662570a
