--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 4e0a048
-	base = db18ea9
+	base = 3a5b983
 	trim = crane_plus
-	trimbase = 
+	trimbase = db18ea9
