--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 4e0a048
-	base = 9b4f38d
+	base = a8243bc
 	trim = crane_plus_description
-	trimbase = 
+	trimbase = 9b4f38d
