--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 4e0a048
-	base = 74c5547
+	base = 1b77f21
 	trim = crane_plus_moveit_config
-	trimbase = 
+	trimbase = 74c5547
