Imported upstream version '2.0.0' of 'upstream'

--- a/.github/workflows/industrial_ci.yml
+++ b/.github/workflows/industrial_ci.yml
@@ -19,7 +19,7 @@ jobs:
         env:
           # テストがワークスペース内のパッケージに依存しているため、setup.bashを読み込む
           # Ref: https://github.com/ros-industrial/industrial_ci/issues/585
-          - { ROS_DISTRO: foxy, ROS_REPO: ros, BEFORE_RUN_TARGET_TEST_EMBED: "ici_with_unset_variables source /root/target_ws/install/setup.bash" }
+          - { ROS_DISTRO: humble, ROS_REPO: ros, BEFORE_RUN_TARGET_TEST_EMBED: "ici_with_unset_variables source /root/target_ws/install/setup.bash" }
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
