--- a/crane_plus_gazebo/CMakeLists.txt
+++ b/crane_plus_gazebo/CMakeLists.txt
@@ -1,12 +1,12 @@
 cmake_minimum_required(VERSION 3.5)
 project(crane_plus_gazebo)
 
-
 find_package(ament_cmake REQUIRED)
 
 install(DIRECTORY
   launch
   worlds
+  gui
   DESTINATION share/${PROJECT_NAME}/
 )
 
