--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 3f7b204
-	base = abccf52
-	trim = 
-	trimbase = 
+	base = 39ac1ad
+	trim = crane_plus
+	trimbase = abccf52
