--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 3f7b204
-	base = 7d14bab
-	trim = 
-	trimbase = 
+	base = 7ecad5d
+	trim = crane_plus_examples
+	trimbase = 7d14bab
