--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 3f7b204
-	base = 6d0dceb
-	trim = 
-	trimbase = 
+	base = 624667e
+	trim = crane_plus_gazebo
+	trimbase = 6d0dceb
