--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 3f7b204
-	base = 775da55
-	trim = 
-	trimbase = 
+	base = ae5cc80
+	trim = crane_plus_description
+	trimbase = 775da55
