--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 3f7b204
-	base = 266a57f
-	trim = 
-	trimbase = 
+	base = ad30057
+	trim = crane_plus_control
+	trimbase = 266a57f
