--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 3f7b204
-	base = d70e7b1
-	trim = 
-	trimbase = 
+	base = 48dcf04
+	trim = crane_plus_moveit_config
+	trimbase = d70e7b1
