--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/humble/crane_plus
-	previous = 
-	base = 39ac1ad
+	previous = 39ac1ad
+	base = ca285cf
 	trim = 
 	trimbase = 
