--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/crane_plus
-	previous = 
-	base = e0c7b41
+	previous = e0c7b41
+	base = efbd40e
 	trim = 
 	trimbase = 
