--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/humble/crane_plus_description
-	previous = 
-	base = ae5cc80
+	previous = ae5cc80
+	base = 97d3eb1
 	trim = 
 	trimbase = 
