--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/crane_plus_description
-	previous = 
-	base = a6c2154
+	previous = a6c2154
+	base = ac3db42
 	trim = 
 	trimbase = 
