--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/humble/crane_plus_gazebo
-	previous = 
-	base = 624667e
+	previous = 624667e
+	base = 92388bb
 	trim = 
 	trimbase = 
