--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/crane_plus_gazebo
-	previous = 
-	base = 9957116
+	previous = 9957116
+	base = 8829a5d
 	trim = 
 	trimbase = 
