--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/humble/crane_plus_control
-	previous = 
-	base = ad30057
+	previous = ad30057
+	base = a01ce86
 	trim = 
 	trimbase = 
