--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/crane_plus_control
-	previous = 
-	base = 898c470
+	previous = 898c470
+	base = 7e49e69
 	trim = 
 	trimbase = 
