--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/crane_plus_examples
-	previous = 
-	base = 119b338
+	previous = 119b338
+	base = 6f8d6e7
 	trim = 
 	trimbase = 
