--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/crane_plus_moveit_config
-	previous = 
-	base = be2310f
+	previous = be2310f
+	base = b686c56
 	trim = 
 	trimbase = 
