--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/crane_plus_control
-	previous = 
-	base = a86e6a6
+	previous = a86e6a6
+	base = 0c48a10
 	trim = 
 	trimbase = 
