--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/crane_plus_gazebo
-	previous = 
-	base = 205123a
+	previous = 205123a
+	base = 96119ca
 	trim = 
 	trimbase = 
