--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/crane_plus_examples
-	previous = 
-	base = 156594a
+	previous = 156594a
+	base = d869c7e
 	trim = 
 	trimbase = 
