--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/crane_plus_moveit_config
-	previous = 
-	base = a1b073e
+	previous = a1b073e
+	base = 7016195
 	trim = 
 	trimbase = 
