--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/crane_plus
-	previous = 
-	base = 9075d5f
+	previous = 9075d5f
+	base = e4714ef
 	trim = 
 	trimbase = 
