--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/crane_plus_description
-	previous = 
-	base = f2280a7
+	previous = f2280a7
+	base = 1d7b17a
 	trim = 
 	trimbase = 
