--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/humble/crane_plus_description
-	previous = 
-	base = d174130
+	previous = d174130
+	base = b168e23
 	trim = 
 	trimbase = 
