--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/humble/crane_plus_control
-	previous = 
-	base = a696476
+	previous = a696476
+	base = d64f5e1
 	trim = 
 	trimbase = 
