--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/humble/crane_plus
-	previous = 
-	base = dedc23b
+	previous = dedc23b
+	base = e5a9307
 	trim = 
 	trimbase = 
