--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/humble/crane_plus_gazebo
-	previous = 
-	base = 46cd2ec
+	previous = 46cd2ec
+	base = ac517ce
 	trim = 
 	trimbase = 
