--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/humble/crane_plus_examples
-	previous = 
-	base = 7ecad5d
+	previous = 7ecad5d
+	base = aa28089
 	trim = 
 	trimbase = 
