--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/humble/crane_plus_examples
-	previous = 
-	base = cf954d8
+	previous = cf954d8
+	base = a895705
 	trim = 
 	trimbase = 
