--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/humble/crane_plus_moveit_config
-	previous = 
-	base = 48dcf04
+	previous = 48dcf04
+	base = 8cb6db9
 	trim = 
 	trimbase = 
