--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/humble/crane_plus_moveit_config
-	previous = 
-	base = d129ba0
+	previous = d129ba0
+	base = 23e7ed6
 	trim = 
 	trimbase = 
