--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = ac7c278
-	base = 8f82c95
+	base = 2000776
 	trim = crane_plus
-	trimbase = 
+	trimbase = 8f82c95
