--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = ac7c278
-	base = af09ac5
+	base = 48a0fbc
 	trim = crane_plus_examples
-	trimbase = 
+	trimbase = af09ac5
