--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = ac7c278
-	base = 934b8b4
+	base = 72c902c
 	trim = crane_plus_gazebo
-	trimbase = 
+	trimbase = 934b8b4
