--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = ac7c278
-	base = 6ced0dc
+	base = 685c9e5
 	trim = crane_plus_description
-	trimbase = 
+	trimbase = 6ced0dc
