--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = ac7c278
-	base = bffdd9d
+	base = 222de19
 	trim = crane_plus_control
-	trimbase = 
+	trimbase = bffdd9d
