--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = ac7c278
-	base = 68e3a12
+	base = 9252ce9
 	trim = crane_plus_moveit_config
-	trimbase = 
+	trimbase = 68e3a12
