--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/crane_plus_description
-	previous = 
-	base = f435fac
+	previous = f435fac
+	base = 80f410b
 	trim = 
 	trimbase = 
