--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/crane_plus_control
-	previous = 
-	base = b4039dd
+	previous = b4039dd
+	base = 85bfa78
 	trim = 
 	trimbase = 
