--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/crane_plus_gazebo
-	previous = 
-	base = 9076e56
+	previous = 9076e56
+	base = 1d2a435
 	trim = 
 	trimbase = 
