--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/crane_plus_moveit_config
-	previous = 
-	base = 1717f8c
+	previous = 1717f8c
+	base = eff1294
 	trim = 
 	trimbase = 
