--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/crane_plus_examples
-	previous = 
-	base = 3121a69
+	previous = 3121a69
+	base = 880874e
 	trim = 
 	trimbase = 
