--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/crane_plus
-	previous = 
-	base = 201a504
+	previous = 201a504
+	base = 36eb9ec
 	trim = 
 	trimbase = 
