--- a/crane_plus_description/package.xml
+++ b/crane_plus_description/package.xml
@@ -2,19 +2,19 @@
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
   <name>crane_plus_description</name>
-  <version>2.0.1</version>
+  <version>3.0.0</version>
   <description>CRANE+ V2 description package</description>
   <maintainer email="shop@rt-net.jp">RT Corporation</maintainer>
   <license>Apache License 2.0</license>
 
   <author email="s.aoki@rt-net.jp">Shota Aoki</author>
   <author email="kuwagata@rt-net.jp">Atsushi Kuwagata</author>
+  <author email="mizoguchi@rt-net.jp">Nozomi Mizoguchi</author>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
   <buildtool_depend>ament_cmake_python</buildtool_depend>
 
-  <depend>gazebo_ros2_control</depend>
-  <depend>ign_ros2_control</depend>
+  <depend>gz_ros2_control</depend>
   <depend>joint_state_publisher_gui</depend>
   <depend>launch</depend>
   <depend>robot_state_publisher</depend>
