--- a/crane_plus_gazebo/gui/gui.config
+++ b/crane_plus_gazebo/gui/gui.config
@@ -27,28 +27,103 @@
 <!-- GUI plugins -->
 
 <!-- 3D scene -->
-<plugin filename="GzScene3D" name="3D View">
-  <ignition-gui>
+<plugin filename="MinimalScene" name="3D View">
+  <gz-gui>
     <title>3D View</title>
     <property type="bool" key="showTitleBar">false</property>
     <property type="string" key="state">docked</property>
-  </ignition-gui>
+  </gz-gui>
 
   <engine>ogre2</engine>
   <scene>scene</scene>
   <ambient_light>0.4 0.4 0.4</ambient_light>
   <background_color>0.8 0.8 0.8</background_color>
-  <camera_pose>0.4 0 1.4 0 0.4 3.14</camera_pose>
+  <camera_pose>0.7 0 1.5 0 0.4 3.14</camera_pose>
+  <horizontal_fov>50</horizontal_fov>
 </plugin>
 
-<!-- Play / pause / step -->
+<!-- Plugins that add functionality to the scene -->
+<plugin filename="EntityContextMenuPlugin" name="Entity context menu">
+  <gz-gui>
+    <property key="state" type="string">floating</property>
+    <property key="width" type="double">5</property>
+    <property key="height" type="double">5</property>
+    <property key="showTitleBar" type="bool">false</property>
+  </gz-gui>
+</plugin>
+<plugin filename="GzSceneManager" name="Scene Manager">
+  <gz-gui>
+    <property key="resizable" type="bool">false</property>
+    <property key="width" type="double">5</property>
+    <property key="height" type="double">5</property>
+    <property key="state" type="string">floating</property>
+    <property key="showTitleBar" type="bool">false</property>
+  </gz-gui>
+</plugin>
+<plugin filename="InteractiveViewControl" name="Interactive view control">
+  <gz-gui>
+    <property key="resizable" type="bool">false</property>
+    <property key="width" type="double">5</property>
+    <property key="height" type="double">5</property>
+    <property key="state" type="string">floating</property>
+    <property key="showTitleBar" type="bool">false</property>
+  </gz-gui>
+</plugin>
+<plugin filename="CameraTracking" name="Camera Tracking">
+  <gz-gui>
+    <property key="resizable" type="bool">false</property>
+    <property key="width" type="double">5</property>
+    <property key="height" type="double">5</property>
+    <property key="state" type="string">floating</property>
+    <property key="showTitleBar" type="bool">false</property>
+  </gz-gui>
+</plugin>
+<plugin filename="MarkerManager" name="Marker manager">
+  <gz-gui>
+    <property key="resizable" type="bool">false</property>
+    <property key="width" type="double">5</property>
+    <property key="height" type="double">5</property>
+    <property key="state" type="string">floating</property>
+    <property key="showTitleBar" type="bool">false</property>
+  </gz-gui>
+</plugin>
+<plugin filename="SelectEntities" name="Select Entities">
+  <gz-gui>
+    <property key="resizable" type="bool">false</property>
+    <property key="width" type="double">5</property>
+    <property key="height" type="double">5</property>
+    <property key="state" type="string">floating</property>
+    <property key="showTitleBar" type="bool">false</property>
+  </gz-gui>
+</plugin>
+
+<plugin filename="Spawn" name="Spawn Entities">
+  <gz-gui>
+    <property key="resizable" type="bool">false</property>
+    <property key="width" type="double">5</property>
+    <property key="height" type="double">5</property>
+    <property key="state" type="string">floating</property>
+    <property key="showTitleBar" type="bool">false</property>
+  </gz-gui>
+</plugin>
+
+<plugin filename="VisualizationCapabilities" name="Visualization Capabilities">
+  <gz-gui>
+    <property key="resizable" type="bool">false</property>
+    <property key="width" type="double">5</property>
+    <property key="height" type="double">5</property>
+    <property key="state" type="string">floating</property>
+    <property key="showTitleBar" type="bool">false</property>
+  </gz-gui>
+</plugin>
+
+<!-- World control -->
 <plugin filename="WorldControl" name="World control">
-  <ignition-gui>
+  <gz-gui>
     <title>World control</title>
     <property type="bool" key="showTitleBar">false</property>
     <property type="bool" key="resizable">false</property>
     <property type="double" key="height">72</property>
-    <property type="double" key="width">121</property>
     <property type="double" key="z">1</property>
 
     <property type="string" key="state">floating</property>
@@ -56,17 +131,18 @@
       <line own="left" target="left"/>
       <line own="bottom" target="bottom"/>
     </anchors>
-  </ignition-gui>
+  </gz-gui>
 
   <play_pause>true</play_pause>
   <step>true</step>
   <start_paused>true</start_paused>
+  <use_event>true</use_event>
 
 </plugin>
 
-<!-- Time / RTF -->
+<!-- World statistics -->
 <plugin filename="WorldStats" name="World stats">
-  <ignition-gui>
+  <gz-gui>
     <title>World stats</title>
     <property type="bool" key="showTitleBar">false</property>
     <property type="bool" key="resizable">false</property>
@@ -79,18 +155,17 @@
       <line own="right" target="right"/>
       <line own="bottom" target="bottom"/>
     </anchors>
-  </ignition-gui>
+  </gz-gui>
 
   <sim_time>true</sim_time>
   <real_time>true</real_time>
   <real_time_factor>true</real_time_factor>
   <iterations>true</iterations>
-
 </plugin>
 
-<!-- Translate / rotate -->
-<plugin filename="TransformControl" name="Transform control">
-  <ignition-gui>
+<!-- Insert simple shapes -->
+<plugin filename="Shapes" name="Shapes">
+  <gz-gui>
     <property key="resizable" type="bool">false</property>
     <property key="x" type="double">0</property>
     <property key="y" type="double">0</property>
@@ -99,12 +174,12 @@
     <property key="state" type="string">floating</property>
     <property key="showTitleBar" type="bool">false</property>
     <property key="cardBackground" type="string">#666666</property>
-  </ignition-gui>
+  </gz-gui>
 </plugin>
 
-<!-- Insert simple shapes -->
-<plugin filename="Shapes" name="Shapes">
-  <ignition-gui>
+<!-- Insert lights -->
+<plugin filename="Lights" name="Lights">
+  <gz-gui>
     <property key="resizable" type="bool">false</property>
     <property key="x" type="double">250</property>
     <property key="y" type="double">0</property>
@@ -113,35 +188,63 @@
     <property key="state" type="string">floating</property>
     <property key="showTitleBar" type="bool">false</property>
     <property key="cardBackground" type="string">#666666</property>
-  </ignition-gui>
+  </gz-gui>
+</plugin>
+
+<!-- Translate / rotate -->
+<plugin filename="TransformControl" name="Transform control">
+  <gz-gui>
+    <property key="resizable" type="bool">false</property>
+    <property key="x" type="double">0</property>
+    <property key="y" type="double">50</property>
+    <property key="width" type="double">250</property>
+    <property key="height" type="double">50</property>
+    <property key="state" type="string">floating</property>
+    <property key="showTitleBar" type="bool">false</property>
+    <property key="cardBackground" type="string">#777777</property>
+  </gz-gui>
 </plugin>
 
 <!-- Screenshot -->
 <plugin filename="Screenshot" name="Screenshot">
-  <ignition-gui>
+  <gz-gui>
     <property key="resizable" type="bool">false</property>
-    <property key="x" type="double">400</property>
-    <property key="y" type="double">0</property>
+    <property key="x" type="double">250</property>
+    <property key="y" type="double">50</property>
     <property key="width" type="double">50</property>
     <property key="height" type="double">50</property>
     <property key="state" type="string">floating</property>
     <property key="showTitleBar" type="bool">false</property>
-    <property key="cardBackground" type="string">#666666</property>
-  </ignition-gui>
+    <property key="cardBackground" type="string">#777777</property>
+  </gz-gui>
+</plugin>
+
+<!-- Copy/Paste -->
+<plugin filename="CopyPaste" name="CopyPaste">
+  <gz-gui>
+    <property key="resizable" type="bool">false</property>
+    <property key="x" type="double">300</property>
+    <property key="y" type="double">50</property>
+    <property key="width" type="double">100</property>
+    <property key="height" type="double">50</property>
+    <property key="state" type="string">floating</property>
+    <property key="showTitleBar" type="bool">false</property>
+    <property key="cardBackground" type="string">#777777</property>
+  </gz-gui>
 </plugin>
 
 <!-- Inspector -->
 <plugin filename="ComponentInspector" name="Component inspector">
-  <ignition-gui>
+  <gz-gui>
     <property type="bool" key="showTitleBar">false</property>
     <property type="string" key="state">docked</property>
-  </ignition-gui>
+  </gz-gui>
 </plugin>
 
 <!-- Entity tree -->
 <plugin filename="EntityTree" name="Entity tree">
-  <ignition-gui>
+  <gz-gui>
     <property type="bool" key="showTitleBar">false</property>
     <property type="string" key="state">docked</property>
-  </ignition-gui>
+  </gz-gui>
 </plugin>
