--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = c819543
-	base = cb232da
-	trim = 
-	trimbase = 
+	base = 61bfa71
+	trim = crane_plus
+	trimbase = cb232da
