--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = c819543
-	base = cd39508
-	trim = 
-	trimbase = 
+	base = 879dc84
+	trim = crane_plus_control
+	trimbase = cd39508
