--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = c819543
-	base = 14016ec
-	trim = 
-	trimbase = 
+	base = 8ec5af6
+	trim = crane_plus_description
+	trimbase = 14016ec
