--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = c819543
-	base = c2b4bed
-	trim = 
-	trimbase = 
+	base = 70132a1
+	trim = crane_plus_examples
+	trimbase = c2b4bed
