--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = c819543
-	base = 2cd5dc2
-	trim = 
-	trimbase = 
+	base = 2388380
+	trim = crane_plus_gazebo
+	trimbase = 2cd5dc2
