--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = c819543
-	base = 5d229b2
-	trim = 
-	trimbase = 
+	base = c8615e7
+	trim = crane_plus_moveit_config
+	trimbase = 5d229b2
