--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/jazzy/crane_plus
-	previous = 
-	base = 61bfa71
+	previous = 61bfa71
+	base = 4917570
 	trim = 
 	trimbase = 
