--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/jazzy/crane_plus
-	previous = 
-	base = ccc87d0
+	previous = ccc87d0
+	base = 2f51e9c
 	trim = 
 	trimbase = 
