--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/jazzy/crane_plus_control
-	previous = 
-	base = cf67359
+	previous = cf67359
+	base = afb8bf3
 	trim = 
 	trimbase = 
