--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/jazzy/crane_plus_control
-	previous = 
-	base = 879dc84
+	previous = 879dc84
+	base = ddebb55
 	trim = 
 	trimbase = 
