--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/jazzy/crane_plus_examples
-	previous = 
-	base = 70132a1
+	previous = 70132a1
+	base = 07fe28a
 	trim = 
 	trimbase = 
