--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/jazzy/crane_plus_examples
-	previous = 
-	base = e921324
+	previous = e921324
+	base = b7e099a
 	trim = 
 	trimbase = 
