--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/jazzy/crane_plus_moveit_config
-	previous = 
-	base = c8615e7
+	previous = c8615e7
+	base = 0184b14
 	trim = 
 	trimbase = 
