--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/jazzy/crane_plus_moveit_config
-	previous = 
-	base = 2cab671
+	previous = 2cab671
+	base = 90978e3
 	trim = 
 	trimbase = 
