--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/jazzy/crane_plus_description
-	previous = 
-	base = 8ec5af6
+	previous = 8ec5af6
+	base = 1060f9c
 	trim = 
 	trimbase = 
