--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/jazzy/crane_plus_description
-	previous = 
-	base = 5621adf
+	previous = 5621adf
+	base = 892dd3a
 	trim = 
 	trimbase = 
