--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/jazzy/crane_plus_gazebo
-	previous = 
-	base = aee4456
+	previous = aee4456
+	base = ef46f6e
 	trim = 
 	trimbase = 
