--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/jazzy/crane_plus_description
-	previous = 
-	base = 61475d6
+	previous = 61475d6
+	base = cef34a4
 	trim = 
 	trimbase = 
