--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/jazzy/crane_plus_control
-	previous = 
-	base = 9b8532e
+	previous = 9b8532e
+	base = fa0e14a
 	trim = 
 	trimbase = 
