--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/jazzy/crane_plus_moveit_config
-	previous = 
-	base = 763c7a8
+	previous = 763c7a8
+	base = 6a637be
 	trim = 
 	trimbase = 
