--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/jazzy/crane_plus_examples
-	previous = 
-	base = ddb451c
+	previous = ddb451c
+	base = a3c5015
 	trim = 
 	trimbase = 
