--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/jazzy/crane_plus_gazebo
-	previous = 
-	base = 263858d
+	previous = 263858d
+	base = 25bbcb6
 	trim = 
 	trimbase = 
