--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/jazzy/crane_plus
-	previous = 
-	base = 0feecb5
+	previous = 0feecb5
+	base = ca34f20
 	trim = 
 	trimbase = 
