--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/jazzy/crane_plus_control
-	previous = 
-	base = 2464117
+	previous = 2464117
+	base = f4b1ae7
 	trim = 
 	trimbase = 
