--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/jazzy/crane_plus_examples
-	previous = 
-	base = ec93b11
+	previous = ec93b11
+	base = f83720b
 	trim = 
 	trimbase = 
