--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/jazzy/crane_plus
-	previous = 
-	base = ab262cb
+	previous = ab262cb
+	base = 6c3e5d8
 	trim = 
 	trimbase = 
