--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/jazzy/crane_plus_moveit_config
-	previous = 
-	base = 317a79a
+	previous = 317a79a
+	base = f2ed5f8
 	trim = 
 	trimbase = 
