--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/jazzy/crane_plus_gazebo
-	previous = 
-	base = 2388380
+	previous = 2388380
+	base = dd1ba45
 	trim = 
 	trimbase = 
