--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/jazzy/crane_plus_gazebo
-	previous = 
-	base = b085b2e
+	previous = b085b2e
+	base = f2d212c
 	trim = 
 	trimbase = 
