--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/jazzy/crane_plus_description
-	previous = 
-	base = bcbc3ea
+	previous = bcbc3ea
+	base = 8451e9b
 	trim = 
 	trimbase = 
